set min height to iframe to avoid collapsed view

--- a/src/Tickets/Seating/app/postcss/_iframe.pcss
+++ b/src/Tickets/Seating/app/postcss/_iframe.pcss
@@ -9,6 +9,7 @@
 .tec-tickets-seating__iframe {
 	border: none;
 	width: 100%;
+	min-height: 740px;
 }
 
 .firebase-emulator-warning {
